base: Disable Emergency affordance feature in Power Menu
Change-Id: I152d86be266b9067457bd88f0ceb045414728b3d

--- a/core/res/res/values/ex_config.xml
+++ b/core/res/res/values/ex_config.xml
@@ -70,4 +70,7 @@
         <item>screenshot</item>
         <item>screenrecord</item>
     </string-array>
+
+    <!-- Whether to show emergency button in power menu -->
+    <bool name="config_showEmergencyButtonInPowerMenu">false</bool>
 </resources>
