--- a/packages/SystemUI/res/values/ex_strings.xml
+++ b/packages/SystemUI/res/values/ex_strings.xml
@@ -74,4 +74,7 @@
     <string name="global_action_restart_ui">SystemUI</string>
 
     <string name="status_bar_vpn">VPN</string>
+
+    <!-- Screenshot Delete Toast -->
+    <string name="delete_screenshot_toast">Screenshot deleted</string>
 </resources>
