--- a/packages/SystemUI/res/values/ex_strings.xml
+++ b/packages/SystemUI/res/values/ex_strings.xml
@@ -72,4 +72,6 @@
     <string name="global_action_restart_recovery">Recovery</string>
     <string name="global_action_restart_bootloader">Bootloader</string>
     <string name="global_action_restart_ui">SystemUI</string>
+
+    <string name="status_bar_vpn">VPN</string>
 </resources>
