--- a/packages/SystemUI/res/layout/volume_dialog.xml
+++ b/packages/SystemUI/res/layout/volume_dialog.xml
@@ -30,8 +30,6 @@
         android:id="@+id/volume_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="right"
-        android:layout_gravity="right"
         android:layout_marginRight="@dimen/volume_dialog_panel_transparent_padding_right"
         android:orientation="vertical"
         android:clipToPadding="false"
@@ -42,8 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clipChildren="false"
-            android:orientation="vertical"
-            android:gravity="right">
+            android:orientation="vertical">
 
             <include layout="@layout/volume_ringer_drawer" />
 
@@ -53,8 +50,6 @@
                 android:layout_width="@dimen/volume_dialog_ringer_size"
                 android:layout_height="@dimen/volume_dialog_ringer_size"
                 android:layout_marginBottom="@dimen/volume_dialog_spacer"
-                android:gravity="right"
-                android:layout_gravity="right"
                 android:translationZ="@dimen/volume_dialog_elevation"
                 android:clipToPadding="false"
                 android:background="@drawable/rounded_bg_full">
@@ -73,7 +68,6 @@
                 <include layout="@layout/volume_dnd_icon"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
-                         android:layout_marginRight="@dimen/volume_dialog_stream_padding"
                          android:layout_marginTop="6dp"/>
             </FrameLayout>
 
