Use custom globalActionsList to avoid conflicts
Change-Id: I884d80fe7fc1c29f43e219eaff9dcbce47f7498b
Signed-off-by: Josh Fox (XlxFoXxlX) <joshfox87@gmail.com>

--- a/core/res/res/values/ex_config.xml
+++ b/core/res/res/values/ex_config.xml
@@ -62,4 +62,12 @@
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
     </string-array>
 
+    <!-- Advanced reboot menu -->
+    <string-array translatable="false" name="config_custom_globalActionsList">
+        <item>power</item>
+        <item>restart</item>
+        <item>advanced</item>
+        <item>screenshot</item>
+        <item>screenrecord</item>
+    </string-array>
 </resources>
