--- a/packages/SystemUI/res-keyguard/layout/analog_clock.xml
+++ b/packages/SystemUI/res-keyguard/layout/analog_clock.xml
@@ -17,29 +17,29 @@
 <com.android.keyguard.clock.ClockLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-  >
-  <com.android.keyguard.clock.ImageClock
-      android:id="@+id/analog_clock"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-  >
-    <ImageView
-        android:id="@+id/hour_hand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/analog_hour_hand"
-    />
-    <ImageView
-        android:id="@+id/minute_hand"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/analog_minute_hand"
-    />
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/analog_frame"
-    />
-  </com.android.keyguard.clock.ImageClock>
+    android:layout_height="match_parent" >
+
+    <com.android.keyguard.clock.ImageClock
+        android:id="@+id/analog_clock"
+        android:layout_width="@dimen/analog_clock_width"
+        android:layout_height="@dimen/analog_clock_height"
+        android:background="@drawable/analog_clock_background"
+        android:layout_marginBottom="@dimen/clock_bottom_margin">
+
+        <ImageView
+            android:id="@+id/hour_hand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/analog_hour_hand" />
+        <ImageView
+            android:id="@+id/minute_hand"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/analog_minute_hand" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/analog_frame"/>
+
+    </com.android.keyguard.clock.ImageClock>
 </com.android.keyguard.clock.ClockLayout>
