--- a/core/res/res/values/styles_material.xml
+++ b/core/res/res/values/styles_material.xml
@@ -809,7 +809,7 @@ please see styles_device_defaults.xml.
         <item name="indeterminateOnly">false</item>
         <item name="progressDrawable">@drawable/seekbar_track_material</item>
         <item name="indeterminateDrawable">@drawable/seekbar_track_material</item>
-        <item name="thumb">@drawable/seekbar_thumb_material_anim</item>
+        <item name="thumb">@color/transparent</item>
         <item name="splitTrack">true</item>
         <item name="useDisabledAlpha">false</item>
         <item name="focusable">true</item>
